--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
       
         
-          <p>The simplicity and conciseness of Markdown syntax make it easy to write some ordinary documantation. But sometimes you may need something cooler where the basic syntax of markdown may not be enough. Luckily, you can write HTML in a markdown file.</p>
+          <p>The simplicity and conciseness of Markdown make it easy to write some ordinary documantation. But sometimes you may need something cooler where the basic syntax of markdown may not be enough. Luckily, you can write HTML in a markdown file.</p>
           <!--noindex-->
           <div class="post-button text-center">
             <a class="btn" href="/posts/Markdown-extensions/#more" rel="contents">
